--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/graphql": "^12.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "^4.16.1",
+    "@types/bcrypt": "^5.0.0",
+    "bcrypt": "^5.1.0",
     "graphql": "^16.7.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
