--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@prisma/client": "^4.16.1",
     "@types/bcrypt": "^5.0.0",
     "bcrypt": "^5.1.0",
+    "crypto": "^1.0.1",
     "graphql": "^16.7.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
