--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:040323@localhost:5432/postgres?schema=public"
+DATABASE_URL="postgresql://postgres:@Livia040323@34.95.151.48:5432/postgres"
