--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^5.1.0",
     "crypto": "^1.0.1",
     "graphql": "^16.7.1",
+    "luxon": "^3.4.3",
     "package.json": "^2.0.1",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1"
